--- a/src/override/override.html
+++ b/src/override/override.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +8,12 @@
     <meta name="keywords" content="kanban,board,tasks,management" />
     <meta name="application-name" content="Simple Kanban" />
     <meta name="theme-color" content="#343a40">
-    
+
     <link rel="stylesheet" href="/src/css/bootstrap.min.css">
     <link rel="stylesheet" href="/src/css/kanban.css">
     <title>Simple Kanban</title>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="flex-navbar">
@@ -21,22 +22,39 @@
             </span>
             <div class="generic-flex header-right">
                 <a href="javascript:void(0);" id="download-tasks" title="Download Kanban as CSV">
-                    <svg width="23" height="23" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="#fff">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M9 8.25H7.5a2.25 2.25 0 0 0-2.25 2.25v9a2.25 2.25 0 0 0 2.25 2.25h9a2.25 2.25 0 0 0 2.25-2.25v-9a2.25 2.25 0 0 0-2.25-2.25H15M9 12l3 3m0 0 3-3m-3 3V2.25" />
+                    <svg width="23" height="23" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                        stroke-width="2" stroke="#fff">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M9 8.25H7.5a2.25 2.25 0 0 0-2.25 2.25v9a2.25 2.25 0 0 0 2.25 2.25h9a2.25 2.25 0 0 0 2.25-2.25v-9a2.25 2.25 0 0 0-2.25-2.25H15M9 12l3 3m0 0 3-3m-3 3V2.25" />
                     </svg>
                 </a>
                 <a href="javascript:void(0);" id="fullScreenButton" title="Toggle Full Screen">
-                    <svg xmlns="http://www.w3.org/2000/svg" id="arrowPointsOut" height="20px" width="20px" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="#fff" class="size-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 3.75v4.5m0-4.5h4.5m-4.5 0L9 9M3.75 20.25v-4.5m0 4.5h4.5m-4.5 0L9 15M20.25 3.75h-4.5m4.5 0v4.5m0-4.5L15 9m5.25 11.25h-4.5m4.5 0v-4.5m0 4.5L15 15" />
+                    <svg xmlns="http://www.w3.org/2000/svg" id="arrowPointsOut" height="20px" width="20px" fill="none"
+                        viewBox="0 0 24 24" stroke-width="2" stroke="#fff" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M3.75 3.75v4.5m0-4.5h4.5m-4.5 0L9 9M3.75 20.25v-4.5m0 4.5h4.5m-4.5 0L9 15M20.25 3.75h-4.5m4.5 0v4.5m0-4.5L15 9m5.25 11.25h-4.5m4.5 0v-4.5m0 4.5L15 15" />
                     </svg>
-                    <svg xmlns="http://www.w3.org/2000/svg" id="arrowPointsIn" height="20px" width="20px" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="#fff" class="size-6" style="display: none;">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M9 9V4.5M9 9H4.5M9 9 3.75 3.75M9 15v4.5M9 15H4.5M9 15l-5.25 5.25M15 9h4.5M15 9V4.5M15 9l5.25-5.25M15 15h4.5M15 15v4.5m0-4.5 5.25 5.25" />
-                    </svg>              
+                    <svg xmlns="http://www.w3.org/2000/svg" id="arrowPointsIn" height="20px" width="20px" fill="none"
+                        viewBox="0 0 24 24" stroke-width="2" stroke="#fff" class="size-6" style="display: none;">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M9 9V4.5M9 9H4.5M9 9 3.75 3.75M9 15v4.5M9 15H4.5M9 15l-5.25 5.25M15 9h4.5M15 9V4.5M15 9l5.25-5.25M15 15h4.5M15 15v4.5m0-4.5 5.25 5.25" />
+                    </svg>
                 </a>
                 <button class="btn btn-link text-white about-button" data-toggle="modal" href="#aboutModal">
-                    <svg width="25" height="25" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="Warning / Info"> <path id="Vector" d="M12 11V16M12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12C21 16.9706 16.9706 21 12 21ZM12.0498 8V8.1L11.9502 8.1002V8H12.0498Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g> </g></svg>
+                    <svg width="25" height="25" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                        <g id="SVGRepo_iconCarrier">
+                            <g id="Warning / Info">
+                                <path id="Vector"
+                                    d="M12 11V16M12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12C21 16.9706 16.9706 21 12 21ZM12.0498 8V8.1L11.9502 8.1002V8H12.0498Z"
+                                    stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                </path>
+                            </g>
+                        </g>
+                    </svg>
                 </button>
-            </div> 
+            </div>
         </div>
     </nav>
 
@@ -55,15 +73,15 @@
                 <div class="placeholder">Start adding tasks</div>
             </div>
             <input type="text" placeholder="Add a task" id="in-progress-input">
-            <button class="btn btn-primary d-block d-md-none mt-2" onclick="addTask('in-progress')">Add Task</button> 
+            <button class="btn btn-primary d-block d-md-none mt-2" onclick="addTask('in-progress')">Add Task</button>
         </div>
         <div class="column" id="done">
             <h2>Done</h2>
-            <div class="task-list" >
+            <div class="task-list">
                 <div class="placeholder">Start adding tasks</div>
             </div>
             <input type="text" placeholder="Add a task" id="done-input">
-            <button class="btn btn-primary d-block d-md-none mt-2" onclick="addTask('done')">Add Task</button> 
+            <button class="btn btn-primary d-block d-md-none mt-2" onclick="addTask('done')">Add Task</button>
         </div>
     </div>
 
@@ -76,7 +94,8 @@
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body">
-                    <p>A simple <a href="https://en.wikipedia.org/wiki/Kanban_(development)" target="_blank">Kanban</a> board to manage your tasks.</p>
+                    <p>A simple <a href="https://en.wikipedia.org/wiki/Kanban_(development)" target="_blank">Kanban</a>
+                        board to manage your tasks.</p>
                     <p>Key features:</p>
                     <ul>
                         <li>See your most important tasks at a glance.</li>
@@ -84,9 +103,12 @@
                         <li>Simple by design and intuitive interface.</li>
                         <li>Stores tasks <b>on-device</b> for privacy and offline usage.</li>
                     </ul>
-                    <p>Enjoy using this tool? If so, consider <a href="https://buymeacoffee.com/amitmerchant" target="_blank">buying me a coffee</a> so that I keep working on improving it further and the experience remains ad-free.</p>
+                    <p>Enjoy using this tool? If so, consider <a href="https://buymeacoffee.com/amitmerchant"
+                            target="_blank">buying me a coffee</a> so that I keep working on improving it further and
+                        the experience remains ad-free.</p>
                     <p class="text-center mb-0">
-                        <b>Brought to you by <a href="https://amitmerchant.com" class="about-author-link">Amit Merchant</a></b>
+                        <b>Brought to you by <a href="https://amitmerchant.com" class="about-author-link">Amit
+                                Merchant</a></b>
                     </p>
                 </div>
                 <div class="modal-footer">
@@ -100,14 +122,6 @@
     <script src="/src/js/bootstrap.min.js"></script>
     <script src="/src/js/Sortable.min.js"></script>
     <script src="/src/js/kanban.js"></script>
-
-    <!-- Global site tag (gtag.js) - Google Analytics - GA4 -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-43339302-6"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-43339302-6');
-    </script>
 </body>
+
 </html>
